# vacalibration

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  DESCRIPTION  Dockerfile  NAMESPACE  README.md  README_DEPLOYMENT.md  docker-compose.yml  render.yaml  run_example.R  test_openva_output.R
api/: .dockerignore  API_SPECIFICATION.md  Dockerfile  ENDPOINT_TEST_RESULTS.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  api-design.md  api-test.md  api-todo.md  docker-compose.yml  how-to-generate-openva-output.md  install_r.sh  pyproject.toml  start_local.sh  start_worker.sh  start_workers.py  start_workers.sh  test_cause_map.R  test_celery.py  test_realtime.sh  test_websocket.py
api/app/: __init__.py  async_calibration.py  calibration_service.py  config.py  integration_example.py  job_endpoints.py  main.py  main_direct.py  main_simple.py  r_script_generator.py  redis_pubsub.py  router.py  security.py  validation.py  websocket_handler.py  worker_health.py
api/app/legacy/: README.md  main_simple.py
api/docs/: JOB_MANAGEMENT_GUIDE.md  validation_documentation.md
api/r_scripts/: run_calibration.R
api/scripts/: export_data.R
api/tests/: README.md  TEST_SUMMARY.md  conftest.py  run_tests.py  test_calibration_endpoints.py  test_celery_no_cache.py  test_celery_with_sample.py  test_job.json  test_model_dump.py  test_real_r_execution.py  test_sync_calibrate.py  test_ws_logs.py  websocket_client_example.py
api/tests/integration/: test_async_workflows.py  test_workflows.py
api/tests/unit/: test_async_calibration.py  test_calibrate.py  test_conversions.py  test_datasets.py  (+3 more)
(+32 files in other folders)
