[tool.poetry]
name = "vacalibration-api"
version = "0.1.0"
description = "Web API for VA-Calibration package"
authors = ["VA-Calibration Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
httpx = "^0.28.1"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.7.0"
locust = "^2.18.0"
fakeredis = "^2.20.0"
websockets = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"